--- a/package.json
+++ b/package.json
@@ -24,13 +24,9 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "redux-saga": "^1.2.2",
-    "styled-components": "^5.3.6",
-    "styled-reset": "^4.4.4",
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.24",
-    "@types/styled-components": "^5.1.26",
-    "babel-plugin-styled-components": "^2.0.7"
+    "@types/react-redux": "^7.1.24"
   }
 }
