--- a/package.json
+++ b/package.json
@@ -1,78 +1,20 @@
 {
-  "name": "notional-api",
-  "version": "1.0.0",
-  "description": "Notional Api",
-  "main": "server.js",
-  "author": "notional.ventures",
-  "license": "MIT",
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,jsx}": [
-      "eslint --no-ignore --fix",
-      "git add --force"
-    ],
-    "*.{json,md}": [
-      "prettier --write",
-      "git add --force"
-    ]
-  },
+  "private": true,
   "scripts": {
-    "start": "node server.js",
+    "dev": "next dev",
     "build": "next build",
-    "analyze": "ANALYZE=true next build",
-    "prod": "NODE_ENV=production node server.js"
+    "start": "next start"
   },
-  "keywords": [
-    "nextjs",
-    "antd",
-    "react",
-    "ssr",
-    "redux",
-    "redux-saga"
-  ],
   "dependencies": {
-    "@ant-design/icons": "^4.0.2",
-    "@babel/polyfill": "^7.8.7",
-    "antd": "^4.3.0",
-    "express": "^4.16.3",
-    "if-comp": "^0.0.8",
-    "next": "^12.0.6",
-    "next-redux-wrapper": "^6.0.2",
-    "prop-types": "^15.6.2",
-    "query-string": "^6.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "7.2.0",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "redux-saga": "1.1.3"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/plugin-transform-runtime": "^7.9.0",
-    "@next/bundle-analyzer": "^11.0.1",
-    "babel-eslint": "^9.0.0",
-    "clean-css": "^5.1.3",
-    "css-minimizer-webpack-plugin": "^3.0.2",
-    "eslint": "^7.30.0",
-    "eslint-config-next": "^11.0.1",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-loader": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.0",
-    "postcss-preset-env": "^6.7.0",
-    "prettier": "^1.15.3",
-    "redux-devtools-extension": "^2.13.5",
-    "terser-webpack-plugin": "^5.1.4",
-    "thread-loader": "^2.1.3"
+    "@ant-design/icons": "^5.0.1",
+    "antd": "^5.2.0",
+    "date-fns": "^2.29.3",
+    "gray-matter": "^4.0.3",
+    "next": "latest",
+    "next-auth": "^4.19.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
   }
 }
