sqlite dev-db using prisma

--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "dev_db_init": "rm prisma/dev.db && prisma db push",
+    "dev_db_dummy_data": "node ./db/script.js"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@prisma/client": "^4.10.1",
     "antd": "^5.2.0",
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
@@ -16,5 +19,8 @@
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1"
+  },
+  "devDependencies": {
+    "prisma": "^4.10.1"
   }
 }
