combine dev_db_dummy_data into dev_db_init

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "dev_db_init": "rm prisma/dev.db && prisma db push",
-    "dev_db_dummy_data": "node ./db/script.js"
+    "dev_db_init": "rm prisma/dev.db && prisma db push && node ./db/script.js"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
