--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.2.0",
     "crypto": "^1.0.1",
     "date-fns": "^2.29.3",
+    "email-validator": "^2.0.4",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "next-auth": "^4.19.2",
