--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "swr": "^2.0.3"
   },
   "devDependencies": {
+    "@cosmjs/stargate": "^0.29.5",
     "@sendgrid/mail": "^7.7.0",
     "prisma": "^4.10.1"
   }
