--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ant-design/icons": "^5.0.1",
     "@prisma/client": "^4.10.1",
     "antd": "^5.2.0",
+    "crc-32": "^1.2.2",
     "crypto": "^1.0.1",
     "date-fns": "^2.29.3",
     "email-validator": "^2.0.4",
