add PRICE_PER_MILLION_POINTS to .env

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="secret"
 SENDGRID_API_KEY="put_your_sendgrid_api_key_here"
+PRICE_PER_MILLION_POINTS="15000000"
