--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="secret"
 SENDGRID_API_KEY="put_your_sendgrid_api_key_here"
 PRICE_PER_MILLION_POINTS="15000000"
+ADMIN_USERNAME="admin"
+ADMIN_PASSWORD="admin"
