--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "devDependencies": {
     "@cosmjs/stargate": "^0.29.5",
     "@sendgrid/mail": "^7.7.0",
+    "dotenv": "^16.0.3",
+    "node-fetch-commonjs": "^3.2.4",
     "prisma": "^4.10.1"
   }
 }
