--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ SENDGRID_API_KEY="put_your_sendgrid_api_key_here"
 PRICE_PER_MILLION_POINTS="15000000"
 ADMIN_USERNAME="admin"
 ADMIN_PASSWORD="admin"
+WATCH_ADDR="osmo1038lvdayf3c96lpu05c09rf3jua2jhycvcavw5"
